# examtopics-scraper

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examtopics/: __init__.py
src/examtopics/: __init__.py  exam.html
