[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "examtopics-downloader"
version = "1.0.0"
description = "Scrape exam questions from examtopics.com and generate an interactive HTML study page"
license = {text = "MIT"}
authors = [
    {name = "examtopics-downloader contributors"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25",
    "beautifulsoup4>=4.9",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

[project.scripts]
examtopics = "examtopics:main"

[tool.setuptools.packages.find]
include = ["examtopics*"]

[tool.setuptools.package-data]
examtopics = ["exam.html"]
