[build-system]
requires = ["uv_build>=0.6.0,<0.12"]
build-backend = "uv_build"

[project]
name = "examtopics-downloader"
version = "1.0.0"
description = "Scrape exam questions from examtopics.com and generate an interactive HTML study page"
license = {text = "MIT"}
authors = [
    {name = "examtopics-downloader contributors"}
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

[project.scripts]
examtopics = "examtopics:main"

[tool.uv.build-backend]
module-name = "examtopics"
